deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: msg-app-deployment
spec:
  selector:
    matchLabels:
      app: msg-app
  template:
    metadata:
      labels:
        app: msg-app
    spec:
      containers:
        - name: msg-app
          image: flikweertvision/msg-app-excercise:0.0.14
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: msg-app-software-service
spec:
  type: ClusterIP
  selector:
    app: msg-app
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: msg-app-software-service-headless
spec:
  clusterIP: None
  selector:
    app: msg-app
  ports:
    - port: 80
      targetPort: 8080
